Responsive and alignment issues

--- a/src/app/dialogs/advanced.directives.dialog/advanced.directives.dialog.component.scss
+++ b/src/app/dialogs/advanced.directives.dialog/advanced.directives.dialog.component.scss
@@ -40,3 +40,7 @@ textarea::placeholder{
 .adv-modal-body.modal-body {
   padding: 20px 18px !important;
 }
+.modal-body {
+  max-height: calc(90vh - 200px);
+  overflow-y: auto;
+}
