--- a/src/app/dialogs/patient.dialog/patient.dialog.component.scss
+++ b/src/app/dialogs/patient.dialog/patient.dialog.component.scss
@@ -7,7 +7,7 @@
   margin: 0 !important;
 }
 .modal-body {
-  max-height: calc(90vh - 180px);
+  max-height: calc(90vh - 200px);
   overflow-y: auto;
 }
 .modal-content{
